[package]
name = "fibext"
version = "0.2.0"
edition = "2021"
authors = ["cainthebest"]
description = "A versatile Fibonacci sequence generator for Rust, with support for large numbers and optional iterator interface."
license = "GPL-3.0"

[[bench]]
name = "fibonacci"
harness = false


[dependencies]
num-bigint = { version = "0.4", optional = true }

[dev-dependencies]
criterion = "0.3"


[features]
default = ["std", "checked-overflow", "iterator"]
std = []
checked-overflow = []
iterator = []
large-numbers = ["dep:num-bigint"]

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = 'abort'
overflow-checks = true
debug = 0
