[package]
name = "fibext"
version = "0.2.1"
edition = "2021"
authors = ["cainthebest"]
description = "A versatile Fibonacci sequence generator for Rust, with support for large numbers and optional iterator interface."
license = "GPL-3.0"
repository = "https://github.com/cainthebest/fibext"
documentation = "https://docs.rs/fibext"
readme = "README.md"
keywords = ["Fibonacci", "Science", "Mathematics", "Sequence", "Numbers"]
categories = ["mathematics", "no-std"]

[[bench]]
name = "fibonacci"
harness = false

[dependencies]
num-bigint = { version = "0.4", optional = true }

[dev-dependencies]
criterion = "0.6"

[features]
default = ["std", "checked-overflow", "iterator"]
std = []
checked-overflow = []
iterator = []
large-numbers = ["dep:num-bigint"]

[profile.release]
lto = true
opt-level = 2
panic = 'abort'
overflow-checks = true
debug = 0
